--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Local File Search Agent</title>
+    <title>Local Agent</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -15,7 +15,7 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <i class="fas fa-robot"></i>
-                <h1>File Search AI</h1>
+                <h1>Local Agent</h1>
             </div>
             
             <div class="sidebar-section">
@@ -68,7 +68,7 @@
             <div class="chat-messages" id="chatMessages">
                 <div class="welcome-message">
                     <i class="fas fa-robot"></i>
-                    <h2>Welcome to Local File Search Agent! 👋</h2>
+                    <h2>Welcome to Local Agent! 👋</h2>
                     <p>I can help you with:</p>
                     <ul>
                         <li><i class="fas fa-search"></i> Search for files across your system</li>
