--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,11 +14,11 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <img src="lekha-logo.png" alt="LEKHA" style="width: 60px; height: 60px; margin-bottom: 10px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                <img src="logo.png" alt="LEKHA" style="width: 60px; height: 60px; margin-bottom: 10px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                 <i class="fas fa-handshake" style="display: none; font-size: 48px; color: #e67e22; margin-bottom: 10px;"></i>
                 <h1>LEKHA</h1>
-                <p style="font-size: 11px; color: #94a3b8; margin-top: -5px; font-weight: 400;">Ram Dhari Fintech Private Limited</p>
-                <p style="font-size: 10px; color: #64748b; margin-top: 2px; font-style: italic;">Personal Assistant to your growth</p>
+                <p style="font-size: 11px; color: #ccaf1b; margin-top: -5px; font-weight: 400;">Ram Dhari Fintech Private Limited</p>
+                <p style="font-size: 10px; color: #5dbc14; margin-top: 2px; font-style: italic;">Personal Assistant to your growth</p>
             </div>
             
             <div class="sidebar-section">
