--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,9 +14,7 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <img src="logo.png" alt="LEKHA" style="width: 60px; height: 60px; margin-bottom: 10px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
-                <i class="fas fa-handshake" style="display: none; font-size: 48px; color: #e67e22; margin-bottom: 10px;"></i>
-                <h1>LEKHA</h1>
+                <img src="logo.jpg" alt="LEKHA" style="width: 100px; height: 100px; margin-bottom: 10px; object-fit: contain;">
                 <p style="font-size: 11px; color: #ccaf1b; margin-top: -5px; font-weight: 400;">Ram Dhari Fintech Private Limited</p>
                 <p style="font-size: 10px; color: #5dbc14; margin-top: 2px; font-style: italic;">Personal Assistant to your growth</p>
             </div>
